fixed bleed right for `section-wrapper`, fixed lingring `auto` warner on #spine height

--- a/css/02-site-header-and-nav.css
+++ b/css/02-site-header-and-nav.css
@@ -21,7 +21,7 @@
 @media (min-width: 989px) {
 
 	#spine {
-		min-height: auto !important;
+		min-height: initial !important;
 		position: relative !important;
 		font-size: 12px;
 		width: 100%;
