--- a/css/03-page.css
+++ b/css/03-page.css
@@ -180,6 +180,7 @@ header.main-header {
 	max-width: none !important;
 	width: calc(1188px + ((100vw - 1188px) / 2)) !important;
 	margin-right: 0 !important;
+	margin-left: auto;
 }
 
 @media (max-width: 1188px) {
